--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 #header {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url('img/background.jpg');
+  background: linear-gradient(rgba(0, 0, 0, .6), rgba(0, 0, 0, .6)), url('background.jpg');
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -280,7 +280,7 @@ body {
 
 .contact{
 	padding-top: 50px;
-	background: linear-gradient(rgba(0, 0, 0, .8),rgba(0, 0, 0, .8)),url('img/mood.jpg');
+	background: linear-gradient(rgba(0, 0, 0, .8),rgba(0, 0, 0, .8)),url('mood.jpg');
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
@@ -353,7 +353,7 @@ body {
 
 #header{
 	height: 100vh;
-	background: linear-gradient(rgba(0, 0, 0, .6),rgba(0, 0, 0, .6)),url('img/background.jpg');
+	background: linear-gradient(rgba(0, 0, 0, .6),rgba(0, 0, 0, .6)),url('background.jpg');
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
@@ -588,7 +588,7 @@ body {
 
 .contact{
 	padding-top: 50px;
-	background: linear-gradient(rgba(0, 0, 0, .8),rgba(0, 0, 0, .8)),url('img/mood.jpg');
+	background: linear-gradient(rgba(0, 0, 0, .8),rgba(0, 0, 0, .8)),url('mood.jpg');
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
