--- a/style.css
+++ b/style.css
@@ -588,7 +588,7 @@ body {
 
 .contact{
 	padding-top: 50px;
-	background: linear-gradient(rgba(0, 0, 0, .8),rgba(0, 0, 0, .8)),url('mood.jpg');
+	background: linear-gradient(rgba(0, 0, 0, .8),rgba(0, 0, 0, .8)),url('end.jpg');
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
